--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,6 +1,8 @@
 blinker==1.7.0
 click==8.1.7
 colorama==0.4.6
+distlib==0.3.7
+filelock==3.13.1
 Flask==3.0.0
 Flask-Cors==4.0.0
 Flask-SQLAlchemy==3.1.1
@@ -8,8 +10,10 @@ greenlet==3.0.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+platformdirs==3.11.0
 psycopg2==2.9.9
 python-dotenv==1.0.0
 SQLAlchemy==2.0.23
 typing_extensions==4.8.0
+virtualenv==20.24.6
 Werkzeug==3.0.1
